--- a/deploy/index.html
+++ b/deploy/index.html
@@ -19,14 +19,18 @@
 
 
 <body>
-<section>
-    <h1>EVENTS</h1>
-    <h1>DONATE</h1>
-    <img src="img/header/logo.png" id="logo">
-    <h1>STORE</h1>
-    <h1>LOGIN</h1>
-</section>
-<section>
+<header id="header">
+    <div>
+        <section>
+            <h1>EVENTS</h1>
+            <h1>DONATE</h1>
+            <img src="img/header/logo.png" id="logo">
+            <h1>STORE</h1>
+            <h1>LOGIN</h1>
+        </section>
+    </div>
+</header>
+<section id="events">
      <ul>
          <li>
              <h1>HERspace</h1>
