--- a/deploy/index.html
+++ b/deploy/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Google Font -->
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
 
@@ -21,76 +22,86 @@
 <body>
 <header id="header">
     <div>
-        <section>
-            <h1>EVENTS</h1>
-            <h1>DONATE</h1>
-            <img src="img/header/logo.png" id="logo">
-            <h1>STORE</h1>
-            <h1>LOGIN</h1>
-        </section>
+        <ul>
+            <li id="eventsLink">
+                <h1>EVENTS</h1>
+            </li>
+            <li id="donateLink">
+                <h1>DONATE</h1>
+            </li>
+            <li id="imageLogo">
+                <img src="img/header/logo.png" id="logo">
+            </li>
+            <li id="storeLink">
+                <h1>STORE</h1>
+            </li>
+            <li id="loginLink">
+                <h1>LOGIN</h1>
+            </li>
+        </ul>
     </div>
 </header>
 <section id="events">
-     <ul>
-         <li>
-             <h1>HERspace</h1>
-             <button>TICKETS</button>
-             <h3>May 14th-16th 2021
+    <div>
+        <ul>
+            <li id="herspaceTop">
+                <h1>HERspace</h1>
+                <h3>May 14th-16th 2021
+                    5pm-10pm</h3>
+                <button>TICKETS</button>
+                <p>Over 20 local Women artists featured
+                    Only 20 visitors per hour 
+                    Tickets Required
+                    Socially Distanced
+                    Masks Required</p>
+            </li>
+            <li id="letsget">
+                <h1>@LETSGETBLACKTOGETHER</h1>
+                <h3>May 20th-23rd 2021
                 5pm-10pm</h3>
-             <p>Over 20 local Women artists featured
+                <button>TICKETS</button>
+                <button>SUBMIT WORK</button>
+                <p>Over 20 local Artists Of Color featured
+                    Only 20 visitors per hour 
+                    Tickets Required
+                    Socially Distanced
+                    Masks Required</p>
+            </li>
+            <li id="peace">
+                <h1>A Peace of Me</h1>
+                <h3>Saturday June 5th 2021
+                    5pm-11pm</h3>
+                    <button>TICKETS</button>
+                    <button>SUBMIT WORK</button>    
+                <h2>ONE DAY ONLY</h2>
+                <p>Over 20 local Artists featured
+                    Only 20 visitors per hour 
+                    Tickets Required
+                    Socially Distanced
+                    Masks Required</p>
+            </li>
+            <li id="herspaceBottom">
+                <h1>HERspace</h1>
+                <h3>June 25th-27th 2021
+                    5pm-10pm</h3>
+                    <button>SUBMIT ARTWORK</button>
+                <p>Over 20 local Women artists featured
                 Only 20 visitors per hour 
                 Tickets Required
                 Socially Distanced
                 Masks Required</p>
-         </li>
-         <li>
-            <h1>@LETSGETBLACKTOGETHER</h1>
-            <button>TICKETS</button>
-            <button>SUBMIT WORK</button>
-            <h3>May 20th-23rd 2021
-               5pm-10pm</h3>
-            <p>Over 20 local Artists Of Color featured
-                Only 20 visitors per hour 
-                Tickets Required
-                Socially Distanced
-                Masks Required</p>
-         </li>
-         <li>
-            <h1>A Peace of Me</h1>
-            <button>TICKETS</button>
-            <button>SUBMIT WORK</button>
-            <h3>Saturday June 5th 2021
-                5pm-11pm</h3>
-            <h2>ONE DAY ONLY</h2>
-            <p>Over 20 local Artists featured
-                Only 20 visitors per hour 
-                Tickets Required
-                Socially Distanced
-                Masks Required</p>
-         </li>
-         <li>
-            <h1>HERspace</h1>
-            <button>SUBMIT ARTWORK</button>
-            <h3>June 25th-27th 2021
-                5pm-10pm</h3>
-            <p>Over 20 local Women artists featured
-               Only 20 visitors per hour 
-               Tickets Required
-               Socially Distanced
-               Masks Required</p>
-         </li>
-     </ul>
+            </li>
+        </ul>
+    </div>
 </section>
-<section>
+<section id="donate">
+        <img src="img/header/logo.png" alt="logo">
      <h1>DONATE TO PHILLY ART COLLECTIVE GALLERY</h1>
      <img src="img/donate/gallery.png" alt="gallery">
      <p>The Coronavirus, COVID-19, is killing the Philly Art Collective Gallery! Over the years Philly Art Collective has become a part of the Philly arts family, and has harvested a great love for underrepresented artists.  We need your help to save this pivotal art gallery. After 6 strong years of serving artists from PA, NJ, NY, and the DMV, the Philly Art Collective Gallery may be seeing its final days!  Closed by restrictions of COVID, unable to do our lively pop-up art experiences, we have struggled to keep our space alive. We have applied unsuccessfully for government assistance and a variety of art grants. We are hopeful for the future but, exhausted. So now we are asking for your help on behalf of all our artists.  
-
-        This beautiful gallery is located in the heart of Old City, Philly, an area well known for the arts in all genres. We are a collective gallery, that puts on amazing events such as HERspace Women’s Art Festival, Old City Has Jazz, Glow in the Dark Night, The BIG Exhibit and outstanding performances by local artists. 
-        
-        The bulk of our income comes from various donation based pop-ups, normally held on each weekend. The love that we have for the arts in Philadelphia will never die and we hope that with your support, PACG will survive these crucial times to get back to our mission of serving the locals. 
-        
-        Take a few seconds to donate and share what you can. No donation is too small and all donations and support is highly appreciated.</p>
+        <br>This beautiful gallery is located in the heart of Old City, Philly, an area well known for the arts in all genres. We are a collective gallery, that puts on amazing events such as HERspace Women’s Art Festival, Old City Has Jazz, Glow in the Dark Night, The BIG Exhibit and outstanding performances by local artists. 
+        <br> bulk of our income comes from various donation based pop-ups, normally held on each weekend. The love that we have for the arts in Philadelphia will never die and we hope that with your support, PACG will survive these crucial times to get back to our mission of serving the locals. 
+        <br>Take a few seconds to donate and share what you can. No donation is too small and all donations and support is highly appreciated.</p>
         <button>DONATE</button>
 </section>
 <section>
