grids still arent workING
but i will continue forward

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -95,6 +95,9 @@
     </div>
 </section>
 <section id="donate">
+        <section id="burger-container">
+                <i class="fas fa-bars nav-btns" id="burger-icon"></i>
+            </section>
         <img src="img/header/logo.png" alt="logo">
      <h1>DONATE TO PHILLY ART COLLECTIVE GALLERY</h1>
      <img src="img/donate/gallery.png" alt="gallery">
@@ -104,25 +107,25 @@
         <br>Take a few seconds to donate and share what you can. No donation is too small and all donations and support is highly appreciated.</p>
         <button>DONATE</button>
 </section>
-<section>
-    <section>
+<section id="shop">
+    <section id="tickets">
         <ul>
             <h1>BUY TICKETS</h1>
-            <li>
+            <li id="womens">
                 <img src="img/ticketCovers/s991589125739791599_p90_i6_w2160.jpeg" alt="first">
                 <button>TICKETS</button>
             </li>
-            <li>
+            <li id="artistsOfColor">
                 <img src="img/ticketCovers/Screen Shot 2021-05-18 at 2.31.23 PM.png" alt="second">
                 <button>TICKETS</button>
             </li>
-            <li>        
+            <li id="peaceofme">        
                 <img src="img/ticketCovers/Screen Shot 2021-05-18 at 2.32.23 PM.png" alt="third">
                 <button>TICKETS</button>
             </li>
         </ul>
     </section>
-    <section>
+    <section id="artwork">
         <ul>
             <h1>ARTWORK</h1>
             <li>
@@ -151,8 +154,13 @@
             </li>
         </ul>
     </section>
+</section> 
+<section id="social">
+    <ul>
+        <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+    </ul>
 </section>
-
 </body>
 
  <!-- jQuery -->
