trying to fix grids
its fine

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -109,6 +109,7 @@
 </section>
 <section id="shop">
     <section id="tickets">
+        <div>
         <ul>
             <h1>BUY TICKETS</h1>
             <li id="womens">
@@ -124,8 +125,10 @@
                 <button>TICKETS</button>
             </li>
         </ul>
+        </div>
     </section>
     <section id="artwork">
+        <div>
         <ul>
             <h1>ARTWORK</h1>
             <li>
@@ -153,6 +156,7 @@
                 <button>PURCHASE</button>
             </li>
         </ul>
+        </div>
     </section>
 </section> 
 <section id="social">
