--- a/deploy/index.html
+++ b/deploy/index.html
@@ -131,28 +131,28 @@
         <div>
         <ul>
             <h1>ARTWORK</h1>
-            <li>
-                <img src="img/artPieces/artwork1.jpeg" alt="">
+            <li id="piece1">
+                <img src="img/artPieces/artwork1.jpeg" alt="piece1">
                 <button>PURCHASE</button>
             </li>
-            <li>
-                <img src="img/artPieces/artwork2.jpeg" alt="">
+            <li id="piece2">
+                <img src="img/artPieces/artwork2.jpeg" alt="piece2">
                 <button>PURCHASE</button>
             </li>
-            <li>
-                <img src="img/artPieces/artwork3.jpeg" alt="">
+            <li id="piece3">
+                <img src="img/artPieces/artwork3.jpeg" alt="piece3">
                 <button>PURCHASE</button>
             </li>
-            <li>
-                <img src="img/artPieces/artwork4.jpeg" alt="">
+            <li id="piece4">
+                <img src="img/artPieces/artwork4.jpeg" alt="piece4">
                 <button>PURCHASE</button>
             </li>
-            <li>
-                <img src="img/artPieces/artwork5.jpeg" alt="">
+            <li id="piece5">
+                <img src="img/artPieces/artwork5.jpeg" alt="piece5">
                 <button>PURCHASE</button>
             </li>
-            <li>
-                <img src="img/artPieces/artwork6.jpeg" alt="">
+            <li id="piece6">
+                <img src="img/artPieces/artwork6.jpeg" alt="piece6">
                 <button>PURCHASE</button>
             </li>
         </ul>
