--- a/deploy/index.html
+++ b/deploy/index.html
@@ -107,53 +107,53 @@
         <br>Take a few seconds to donate and share what you can. No donation is too small and all donations and support is highly appreciated.</p>
         <button>DONATE</button>
 </section>
-<section id="shop">
-    <section id="tickets">
+<section id="tickets">
         <div>
-        <ul>
             <h1>BUY TICKETS</h1>
+        <ul>
             <li id="womens">
-                <img src="img/ticketCovers/s991589125739791599_p90_i6_w2160.jpeg" alt="first">
-                <button>TICKETS</button>
+                <img src="img/ticketCovers/womens.png" alt="first">
+                <button id="purple">TICKETS</button>
             </li>
             <li id="artistsOfColor">
-                <img src="img/ticketCovers/Screen Shot 2021-05-18 at 2.31.23 PM.png" alt="second">
-                <button>TICKETS</button>
+                <img src="img/ticketCovers/letsget.png" alt="second">
+                <button id="yellow">TICKETS</button>
             </li>
             <li id="peaceofme">        
-                <img src="img/ticketCovers/Screen Shot 2021-05-18 at 2.32.23 PM.png" alt="third">
-                <button>TICKETS</button>
+                <img src="img/ticketCovers/peaceofme.png" alt="third">
+                <button id="green">TICKETS</button>
             </li>
         </ul>
         </div>
-    </section>
+ </section>
+
     <section id="artwork">
         <div>
-        <ul>
             <h1>ARTWORK</h1>
+        <ul>
             <li id="piece1">
-                <img src="img/artPieces/artwork1.jpeg" alt="piece1">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork1.png" alt="piece1">
+                <button id="purple">PURCHASE</button>
             </li>
             <li id="piece2">
-                <img src="img/artPieces/artwork2.jpeg" alt="piece2">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork2.png" alt="piece2">
+                <button id="yellow">PURCHASE</button>
             </li>
             <li id="piece3">
-                <img src="img/artPieces/artwork3.jpeg" alt="piece3">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork3.png" alt="piece3">
+                <button id="green">PURCHASE</button>
             </li>
             <li id="piece4">
-                <img src="img/artPieces/artwork4.jpeg" alt="piece4">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork4.png" alt="piece4">
+                <button id="purple">PURCHASE</button>
             </li>
             <li id="piece5">
-                <img src="img/artPieces/artwork5.jpeg" alt="piece5">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork5.png" alt="piece5">
+                <button id="yellow">PURCHASE</button>
             </li>
             <li id="piece6">
-                <img src="img/artPieces/artwork6.jpeg" alt="piece6">
-                <button>PURCHASE</button>
+                <img src="img/artPieces/artwork6.png" alt="piece6">
+                <button id="green">PURCHASE</button>
             </li>
         </ul>
         </div>
