final class fixes
fixes

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -30,7 +30,7 @@
                 <h1>DONATE</h1>
             </li>
             <li id="imageLogo">
-                <img src="img/header/logo.png" id="logo">
+                <img src="img/header/logo2.png" id="logo">
             </li>
             <li id="storeLink">
                 <h1>STORE</h1>
@@ -95,10 +95,9 @@
     </div>
 </section>
 <section id="donate">
-        <section id="burger-container">
-                <i class="fas fa-bars nav-btns" id="burger-icon"></i>
-            </section>
-        <img src="img/header/logo.png" alt="logo">
+        <section id="logo">
+                <img src="img/header/logo2.png" alt="logo">
+        </section>
      <h1>DONATE TO PHILLY ART COLLECTIVE GALLERY</h1>
      <img src="img/donate/gallery.png" alt="gallery">
      <p>The Coronavirus, COVID-19, is killing the Philly Art Collective Gallery! Over the years Philly Art Collective has become a part of the Philly arts family, and has harvested a great love for underrepresented artists.  We need your help to save this pivotal art gallery. After 6 strong years of serving artists from PA, NJ, NY, and the DMV, the Philly Art Collective Gallery may be seeing its final days!  Closed by restrictions of COVID, unable to do our lively pop-up art experiences, we have struggled to keep our space alive. We have applied unsuccessfully for government assistance and a variety of art grants. We are hopeful for the future but, exhausted. So now we are asking for your help on behalf of all our artists.  
