putting in backgrounds
adding different back colors

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -127,9 +127,9 @@
  </section>
 
     <section id="artwork">
-        <div>
+        <div id="fullback">
             <h1>ARTWORK</h1>
-        <ul>
+        <ul id="pieces">
             <li id="piece1">
                 <img src="img/artPieces/artwork1.png" alt="piece1">
                 <button id="purple">PURCHASE</button>
