more background fixes

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -107,9 +107,12 @@
         <button id="donbutt">DONATE</button>
 </section>
 <section id="tickets">
-        <div>
+    <section id="toplogo">
+        <img src="img/header/logo2.png" alt="logo">
+    </section>
+        <div id="fullback">
             <h1>BUY TICKETS</h1>
-        <ul>
+        <ul id="blocks">
             <li id="womens">
                 <img src="img/ticketCovers/womens.png" alt="first">
                 <button id="purple">TICKETS</button>
@@ -127,6 +130,7 @@
  </section>
 
     <section id="artwork">
+
         <div id="fullback">
             <h1>ARTWORK</h1>
         <ul id="pieces">
