--- a/deploy/index.html
+++ b/deploy/index.html
@@ -119,6 +119,20 @@
     </div>
 </section>
 <section id="donate">
+        <!-- <section id="burger-container">
+        <i class="fas fa-bars nav-btns" id="burger-icon"></i>
+    </section>
+
+    <nav id="nav-container" data-nav="main-navigation">
+        <ul>
+            <li><a href="#EVENTS" class="nav-btns">EVENTS</a></li>
+            <li><a href="#DONATE" class="nav-btns">DONATE</a></li>
+            <li><a href="#logo" class="nav-btns"><img src="img/header/logo2.png" alt="logo" class="always-show"></a></li>
+            <li><a href="#STORE" class="nav-btns">STORE</a></li>
+            <li><a href="#LOGIN" class="nav-btns">LOGIN</a></li>
+        </ul>
+    </nav> -->
+
         <section id="logo">
                 <img src="img/header/logo2.png" alt="logo">
         </section>
@@ -139,12 +153,12 @@
                 
             </section
 
-</section>
+
 <section id="tickets">
     <section id="toplogo">
         <img src="img/header/logo2.png" alt="logo">
     </section>
-        <div id="fullback">
+        <div id="fullbacktickets">
             <h1>BUY TICKETS</h1>
         <ul id="blocks">
             <li id="womens">
