--- a/deploy/index.html
+++ b/deploy/index.html
@@ -22,7 +22,23 @@
 <body>
 <header id="header">
     <div>
-        <ul>
+        <section id="burger-container">
+            <i class="fas fa-bars nav-btns" id="burger-icon"></i>
+        </section>
+
+        <nav id="nav-container" data-nav="main-navigation">
+            <ul>
+                <li><a href="#EVENTS" class="nav-btns">EVENTS</a></li>
+                <li><a href="#DONATE" class="nav-btns">DONATE</a></li>
+                <li><a href="#logo" class="nav-btns"><img src="img/header/logo2.png" alt="robot logo" class="show-for-lg"></a></li>
+                <li><a href="#STORE" class="nav-btns">STORE</a></li>
+                <li><a href="#LOGIN" class="nav-btns">LOGIN</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+        <!-- <ul>
             <li id="eventsLink">
                 <h1>EVENTS</h1>
             </li>
@@ -38,9 +54,8 @@
             <li id="loginLink">
                 <h1>LOGIN</h1>
             </li>
-        </ul>
-    </div>
-</header>
+        </ul> -->
+
 <section id="events">
     <div>
         <ul>
