--- a/deploy/index.html
+++ b/deploy/index.html
@@ -130,7 +130,7 @@
         <br> bulk of our income comes from various donation based pop-ups, normally held on each weekend. The love that we have for the arts in Philadelphia will never die and we hope that with your support, PACG will survive these crucial times to get back to our mission of serving the locals. 
         <br>Take a few seconds to donate and share what you can. No donation is too small and all donations and support is highly appreciated.</p>
         <button id="donbutt">DONATE</button>
-        <section id="social">
+        <section id="social2">
                 <a href="https://www.facebook.com/phillyartcollective/">
                     <img src="img/footer/facebook-logo-black-2019.png" alt="facebook">
                 </a>
@@ -138,9 +138,9 @@
                     <img src="img/footer/insta-logo.png" alt="instagram">
                 </a>
                 
-            </section
+            </section>
 
-</section>
+</section> 
 <section id="tickets">
     <section id="toplogo">
         <img src="img/header/logo2.png" alt="logo">
@@ -164,38 +164,38 @@
         </div>
  </section>
 
-    <section id="artwork">
+ <section id="artwork">
 
-        <div id="fullback">
+        <div id="fullback2"> 
             <h1>ARTWORK</h1>
         <ul id="pieces">
             <li id="piece1">
                 <img src="img/artPieces/artwork1.png" alt="piece1">
-                <button id="purple">PURCHASE</button>
+                <button id="purple2">PURCHASE</button>
             </li>
             <li id="piece2">
                 <img src="img/artPieces/artwork2.png" alt="piece2">
-                <button id="yellow">PURCHASE</button>
+                <button id="yellow2">PURCHASE</button>
             </li>
             <li id="piece3">
                 <img src="img/artPieces/artwork3.png" alt="piece3">
-                <button id="green">PURCHASE</button>
+                <button id="green2">PURCHASE</button>
             </li>
             <li id="piece4">
                 <img src="img/artPieces/artwork4.png" alt="piece4">
-                <button id="purple">PURCHASE</button>
+                <button id="purple3">PURCHASE</button>
             </li>
             <li id="piece5">
                 <img src="img/artPieces/artwork5.png" alt="piece5">
-                <button id="yellow">PURCHASE</button>
+                <button id="yellow3">PURCHASE</button>
             </li>
             <li id="piece6">
                 <img src="img/artPieces/artwork6.png" alt="piece6">
-                <button id="green">PURCHASE</button>
+                <button id="green3">PURCHASE</button>
             </li>
         </ul>
         </div>
-        <section id="social">
+        <section id="social3">
             <a href="https://www.facebook.com/phillyartcollective/">
                 <img src="img/footer/facebook-logo-black-2019.png" alt="facebook">
             </a>
@@ -203,11 +203,10 @@
                 <img src="img/footer/insta-logo.png" alt="instagram">
             </a>
             
-        </section
+        </section>
 
-    </section>
 </section> 
-<section id="social">
+<section id="socialfoot">
     <ul>
         <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
         <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
