--- a/deploy/index.html
+++ b/deploy/index.html
@@ -168,7 +168,9 @@
 
         <div id="fullback2"> 
             <h1>ARTWORK</h1>
+
         <ul id="pieces">
+
             <li id="piece1">
                 <img src="img/artPieces/artwork1.png" alt="piece1">
                 <button id="purple2">PURCHASE</button>
@@ -194,6 +196,7 @@
                 <button id="green3">PURCHASE</button>
             </li>
         </ul>
+        <h2>MARTELL OLIVER<br>@martellolivers</h2>
         </div>
         <section id="social3">
             <a href="https://www.facebook.com/phillyartcollective/">
